[project]
name = "ustransit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pygtfshandler[osm,plot]",
    "urbanaccessanalyzer[h3,osm,plot]",
]

[tool.uv.sources]
urbanaccessanalyzer = { git = "https://github.com/CityScope/UrbanAccessAnalyzer.git" }
pygtfshandler = { git = "https://github.com/CityScope/pyGTFSHandler.git" }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
